AUGREL/src/objects/FormServiceConfig__c.object
<CustomObject>
    <fields>
        <fullName>AttributeKey__c</fullName>
        <label>AttributeKey</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeType__c</fullName>
        <label>AttributeType</label>
        <picklist>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AttributeValue__c</fullName>
        <label>AttributeValue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildNode__c</fullName>
        <label>ChildNode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decimal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATETIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ElementAttributeKey__c</fullName>
        <label>ElementAttributeKey</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElementAttributeValue__c</fullName>
        <label>ElementAttributeValue</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FormService</label>
        <referenceTo>FromServices__c</referenceTo>
        <relationshipName>FormServiceConfig</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_DocumentRequestLineItem_Object__c</fullName>
        <label>Link to DocumentRequestLineItem Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Document_Request_Object__c</fullName>
        <description>The field which corresponds to this field in Document Request object</description>
        <label>Link to Document Request Object</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Elements_Node__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Multiple Elements Node Name</description>
        <label>Multiple Elements Node</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentNode__c</fullName>
        <label>ParentNode</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceAttribute__c</fullName>
        <label>ReferenceAttribute</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMigrationID__c</fullName>
        <formula>FormService__r.MigrationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SMigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seperator__c</fullName>
        <label>Seperator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Co-Borrower</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>allFields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>allFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAttribute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAttribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMultipleAttribute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to configure when we have to get value, applied multiple conditions while parsing the service response XML</description>
        <label>isMultipleAttribute</label>
        <type>Checkbox</type>
    </fields>
    <label>Form Service Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>FormService__c</columns>
        <columns>Link_to_DocumentRequestLineItem_Object__c</columns>
        <columns>Link_to_Document_Request_Object__c</columns>
        <columns>ParentNode__c</columns>
        <columns>ReferenceAttribute__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AttributeName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Service Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>